# Neuroflyer

./: .gitignore  CLAUDE.md  CMakeLists.txt  run.sh
data/: .gitignore
dev_ui/data/seeds/: fighter.nnpk  ntm.nnpk  squad_leader.nnpk
docs/: arena-mode-backlog.md  arena_mode.md  backlog.md  bug-audit-2026-03-26.md  engine-architecture.md  evolution-wishlist.md  feature-audit.md  save-review-1.md  topology-bottleneck-analysis.md
docs/reviews/review-mar-30-01-35-pm/: 00-summary.md  01-bugs.md  02-assumptions.md  03-documentation.md  04-architecture.md  05-consolidation.md  06-dead-code.md  07-stale-code.md  08-improvements.md  cleanup-sprint-plan.md  fix-sprint-plan.md  new-feature-suggestions.md
docs/reviews/review-mar-30-04-46-pm/: 00-summary.md  01-bugs.md  02-assumptions.md  03-documentation.md  04-architecture.md  05-consolidation.md  06-dead-code.md  07-stale-code.md  08-improvements.md  cleanup-sprint-plan.md  fix-sprint-plan.md  new-feature-suggestions.md
docs/superpowers/plans/: 2026-03-24-main-cpp-refactor.md  2026-03-24-save-system.md  2026-03-26-hangar-screen-migration.md  2026-03-26-mirror-mode.md  2026-03-26-structural-heatmap.md  2026-03-26-ui-framework-phase1.md  2026-03-27-net-viewer-zoom.md  2026-03-27-resolution-aware-ui.md  2026-03-28-arena-mode.md  2026-03-28-arena-perception-phase1.md  2026-03-28-team-genome-ui.md  2026-03-30-arena-net-viewer.md  2026-03-30-arena-pause-screen.md  2026-03-30-fighter-drill-mode.md  2026-03-30-squad-leader.md  2026-03-31-sensor-collision-cleanup.md  2026-03-31-solo-vs-squad-fighter-badges.md  2026-04-03-friendly-fire-toggle.md  2026-04-03-squad-skirmish-drill.md  2026-04-06-neuroflyer-node-ids-integration.md  2026-04-06-team-skirmish.md  2026-04-10-graph-skirmish-demo.md  2026-04-10-graphnet-evolution-demo.md
docs/superpowers/specs/: 2026-03-24-hangar-ui-redesign.md  2026-03-24-main-cpp-refactor-design.md  2026-03-24-save-system-design.md  2026-03-24-sensor-engine-design.md  2026-03-24-structured-evolution-design.md  2026-03-26-mirror-mode-design.md  2026-03-26-structural-heatmap-design.md  2026-03-26-ui-architecture-design.md  2026-03-27-net-viewer-zoom-design.md  2026-03-27-resolution-aware-ui-design.md  2026-03-28-arena-mode-design.md  2026-03-28-arena-perception-design.md  2026-03-28-team-genome-ui-design.md  2026-03-30-arena-net-viewer-design.md  2026-03-30-arena-pause-screen-design.md  2026-03-30-fighter-drill-mode-design.md  2026-03-30-squad-leader-design.md  2026-03-31-sensor-collision-cleanup-design.md  2026-03-31-solo-vs-squad-fighter-badges-design.md  2026-04-02-attack-runs-drill-design.md  2026-04-03-friendly-fire-toggle-design.md  2026-04-03-squad-skirmish-drill-design.md  2026-04-06-neuralnet-node-ids-design.md  2026-04-06-neuroflyer-node-ids-integration-design.md  2026-04-06-team-skirmish-design.md  2026-04-07-arena-tick-design.md  2026-04-07-arena-world-design.md  2026-04-10-graph-skirmish-demo-design.md  2026-04-10-graphnet-evolution-demo-design.md
game-ui/include/game-ui/components/: highlight_list.h  modal.h
game-ui/src/components/: highlight_list.cpp  modal.cpp
include/neuroflyer/: app_state.h  arena_config.h  arena_match.h  arena_sensor.h  arena_session.h  arena_tick.h  arena_world.h  attack_run_session.h  base.h  camera.h  collision.h  config.h  constants.h  entity_grid.h  evolution.h  fighter_drill_session.h  game.h  genome_manager.h  mrca_tracker.h  name_validation.h  paths.h  ray.h  renderer.h  sector_grid.h  sensor_engine.h  ship_design.h  skirmish.h  skirmish_tournament.h  snapshot.h  snapshot_io.h  snapshot_utils.h  squad_leader.h  team_evolution.h  team_skirmish.h
include/neuroflyer/components/: fitness_editor.h  lineage_graph.h  pause_evolution.h  pause_training.h  structural_heatmap.h  test_bench.h
include/neuroflyer/renderers/: variant_net_render.h
include/neuroflyer/screens/analysis/: analysis.h
include/neuroflyer/screens/game/: fly_session.h
include/neuroflyer/ui/: legacy_screen.h  theme.h  ui_manager.h  ui_modal.h  ui_screen.h  ui_view.h  ui_widget.h
include/neuroflyer/ui/modals/: confirm_modal.h  editor_modal.h  fighter_pairing_modal.h  input_modal.h  layer_editor_modal.h  node_editor_modal.h
include/neuroflyer/ui/screens/: arena_config_screen.h  arena_game_screen.h  arena_pause_screen.h  attack_run_screen.h  create_genome_screen.h  fighter_drill_pause_screen.h  fighter_drill_screen.h  fly_session_screen.h  hangar_screen.h  (+11 more)
src/demos/: graph_arena_tick.h  graph_evolution.h  graph_skirmish_demo.cpp  mlp_to_graph.h
src/engine/: arena_match.cpp  arena_sensor.cpp  arena_session.cpp  arena_tick.cpp  arena_world.cpp  attack_run_session.cpp  config.cpp  entity_grid.cpp  evolution.cpp  fighter_drill_session.cpp  game.cpp  genome_manager.cpp  mrca_tracker.cpp  paths.cpp  ray.cpp  sector_grid.cpp  sensor_engine.cpp  skirmish.cpp  skirmish_tournament.cpp  snapshot_io.cpp  squad_leader.cpp  team_evolution.cpp  team_skirmish.cpp
src/ui/: main.cpp  renderer.cpp
src/ui/framework/: ui_manager.cpp  ui_widget.cpp
src/ui/modals/: fighter_pairing_modal.cpp  layer_editor_modal.cpp  node_editor_modal.cpp
src/ui/renderers/: variant_net_render.cpp
src/ui/views/: arena_config_view.cpp  arena_game_info_view.cpp  arena_game_view.cpp  fitness_editor.cpp  game_view.cpp  lineage_graph.cpp  net_designer_view.cpp  net_viewer_view.cpp  pause_evolution.cpp  pause_training.cpp  structural_heatmap.cpp  test_bench.cpp  test_bench_view.cpp  topology_preview_view.cpp
tests/: CMakeLists.txt  arena_match_test.cpp  arena_sensor_test.cpp  arena_session_test.cpp  arena_tick_test.cpp  arena_world_test.cpp  attack_run_session_test.cpp  base_test.cpp  camera_test.cpp  config_test.cpp  evolution_test.cpp  fighter_drill_session_test.cpp  game_test.cpp  genome_manager_test.cpp  input_vector_test.cpp  mrca_tracker_test.cpp  name_validation_test.cpp  ray_test.cpp  scoring_test.cpp  sector_grid_test.cpp  ship_design_test.cpp  skirmish_test.cpp  skirmish_tournament_test.cpp  snapshot_io_test.cpp  snapshot_population_test.cpp  squad_leader_test.cpp  team_evolution_test.cpp  team_skirmish_test.cpp
(+34 files in other folders)
